add search index status and statistics
